API for route geometry
